@@ -2,6 +2,7 @@ Version 0.91-dev
     various bug fixes
     input1d now accepts int1 and uint1 types as image index
     input2d now accepts int2 and uint2 types as image index
+    ps::get_global_id for pixel shaders
 
 Version 0.90
     support for offset in sample load
